margin for history mobile screen

--- a/events.html
+++ b/events.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
+        <script async src="https://kit.fontawesome.com/6cc05e1e8e.js"
+        crossorigin="anonymous"></script>
     </head>
       <body>
         <header>            
@@ -48,7 +50,7 @@
               <div class="content">
                 <h3>January</h3>
                 <h4>Winter Bushwhack/Camp Birch</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos(wb22)">Click here to see photos</a>
               </div>
               <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
@@ -61,7 +63,7 @@
               <div class="content">
                 <h3>February</h3>
                 <h4>Real Life First Aid/Cricket Holler</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos(rlfa22)">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
@@ -74,7 +76,7 @@
               <div class="content">
                 <h3>March</h3>
                 <h4>Scouting for Food/Tipp City</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://miamivalleybsa.org/program/scouting-for-food/">
@@ -87,7 +89,7 @@
               <div class="content">
                 <h3>April</h3>
                 <h4>Fish and Wildlife Management/Woodland Trails</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos(fwlm22)">Click here to see photos</a>
               </div>
               <a href="https://www.daytondailynews.com/local/miami-valley-council-boy-scouts-opt-to-close-sell-off-woodland-trails-camp/C7JKU4OQZVEGTJHLVEDAYDJ3FI/">
@@ -100,7 +102,7 @@
               <div class="content">
                 <h3>May</h3>
                 <h4>Cycling/Hueston Woods</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://ohiodnr.gov/go-and-do/plan-a-visit/find-a-property/hueston-woods-state-park">
@@ -113,7 +115,7 @@
               <div class="content">
                 <h3>June</h3>
                 <h4>Summer Camp/Camp Friedlander</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
@@ -126,7 +128,7 @@
               <div class="content">
                 <h3>July</h3>
                 <h4>Paddle Sports/Camp Birch</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.birchbarkcanoelivery.com/">
@@ -139,7 +141,7 @@
               <div class="content">
                 <h3>August</h3>
                 <h4>Fishing/Chenoweth Trails</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.mattlight72.com/about-chenoweth-trails/">
@@ -152,7 +154,7 @@
               <div class="content">
                 <h3>September</h3>
                 <h4>Mumfest/Tipp City</h4>
-                <!-- <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p> -->
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://tippmumfestival.org/">
@@ -165,7 +167,7 @@
               <div class="content">
                 <h3>October</h3>
                 <h4>Shooting Sports/Camp Berry</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
@@ -178,7 +180,7 @@
               <div class="content">
                 <h3>November</h3>
                 <h4>Turkey Bowl/Redmans Picnic Grounds</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=559276214114138">
@@ -191,7 +193,7 @@
               <div class="content">
                 <h3>December</h3>
                 <h4>Yearly Planning/Cricket Holler</h4>
-                <p>ipsum Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati placeat qui voluptas, atque facere non rerum in. Voluptas eaque dolor nemo ullam possimus aperiam numquam consectetur magnam suscipit, quas nulla. ipsum Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam culpa iste fugiat, aperiam in architecto similique aliquid tempora laborum odit illum magni nostrum accusantium dolore doloribus? Officiis, voluptas sequi. Architecto!</p>
+                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
