eagle-scouts.html

--- a/photos.html
+++ b/photos.html
@@ -14,11 +14,12 @@
     <header>            
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./index.html">Home</a>
-        <a href="./events.html">Events</a>          
+        <a href="index.html">Home</a>
+        <a href="events.html">Events</a>          
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
+        <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
         </div>
         <div id="main">
