added eagle scouts page

--- a/events.html
+++ b/events.html
@@ -78,7 +78,7 @@
                 <h3>March</h3>
                 <h4>Scouting for Food/Tipp City</h4>
                 <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
-                <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+                <a href="#gallery" onclick="renderPhotos(sff22)">Click here to see photos</a>
               </div>
               <a href="https://miamivalleybsa.org/program/scouting-for-food/">
                 <div class="eventImg">
