--- a/photos.html
+++ b/photos.html
@@ -45,7 +45,9 @@
         <div class="category">
             <a href="#gallery" onclick="renderPhotos(wb22)">Winter Bushwhack 2022</a>
             <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</a>
+            <a href="#gallery" onclick="renderPhotos(sff22)">Scouting For Food 2022</a>
             <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
+
         </div>
     </section>
     <section class="main">
