added eagle scout oath and grid to eagle scouts

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -39,6 +39,18 @@
               <img src="./assets/images/troop-logo/green_scoutlogo_small.png" alt="troop 586 logo" class="hero-image">
           </div>
         </section>
+        <section class="eagle-oath">
+          <img src="./assets/images/eagle-oath.JPG" alt="eagle scout oath">
+        </section>
+        <!-- <section class="title">
+          <h3 class="section-title">Eagle Scout Oath</h3>
+        </section>
+        <section class="eagle-oath">
+          <p>I reaffirm my allegiance to the three promises of the scout oath.</p>
+          <p>I thoughtfully recognize and take upon myself the obligations and responsibilities of the rank of eagle scout.</p>
+          <p>On my honor, I will do my best to make my training an example and my rank and my influence count strongly for better scouting and for better citizenship in my troop, in my community, and in my contacts with other people.</p>
+          <p>To this I pledge my sacred honor.</p>
+        </section> -->
         <section class="title">
           <h2 class="section-title">Eagle Scouts</h2>
         </section>
