left out a last name

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -56,7 +56,7 @@
           </div>
           <div>
             <h3>2000</h3>
-            <p>Jacques</p>
+            <p>Jacques Kessler</p>
           </div>
           <div>
             <h3>2003</h3>
