removed minors last names

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -133,17 +133,17 @@
             <p>Nick Hartman</p>
             <p>Aaron Davis</p>
             <p>James Ridgeway</p>
-            <p>Garret Piel</p>
+            <p>Garret P.</p>
             <p>Mason Hughes</p>
             <p>Noah Barnes</p>
           </div>
           <div>
             <h3>2020</h3>
-            <p>Leo Hartman</p>
+            <p>Leo H.</p>
           </div>
           <div>
             <h3>2021</h3>
-            <p>Dillen Swartz</p>
+            <p>Dillen S.</p>
           </div>
         </section>
         <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
