--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -119,7 +119,7 @@
             <h3>2015</h3>
             <p>Cameron Schuller</p>
             <p>Blake Dysinger</p>
-            <p>Adam Bynak</p>
+            <p>Adam Buynak</p>
             <p>Joe Hodge</p>
             <p>Stephen Ridgeway</p>
             <p>Bill Mullins III</p>
