--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Events</title>
+        <title>Eagle Scouts</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
