--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Troop 586 Homepage</title>
+        <title>Troop 586</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="troop 586" content="troop 586 tipp city, ohio camping advancement oracle">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
