meta description and keywords

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Troop 586</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="troop 586" content="troop 586 tipp city, ohio camping advancement oracle">
+        <meta name="description" content="troop 586 tipp city, ohio">
+        <meta name="keywords" content="boy scouts, troop website, troop 586, BSA troop 586, boy scouts tipp city, ohio">
         <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
