underdogs patrol patch and authored by for history of soup

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -43,7 +43,8 @@
     <div>
       <p>The troop's original scoutmaster had an interesting policy designed to keep the scouts from harming nature. "If you kill it, you eat it." I don't know why this rule came to be, but it was widely repeated when you joined our troop on an adventure.</p><br>
       <p>At one particular campout, our scoutmaster was backing the troop trailer up into position and accidently ran over a turtle. Upon seeing this, the youths all began repeating our troop rule to said scoutmaster. Now our original scoutmaster is a Vietnam Veteran, and had on several occasions told our troop about making turtle soup to survive in the jungles of Vietnam, so it was suggested he do the same with the recently deceased turtle. He did. The boys loved it.</p><br>
-      <p>From then on, it became a tradition that our scoutmaster would make turtle soup at every December campout. And our mascot, "Soup" was born.</p>
+      <p>From then on, it became a tradition that our scoutmaster would make turtle soup at every December campout. And our mascot, "Soup" was born.</p><br>
+      <p>- Jim Ridgeway, Scoutmaster Troop 586</p>
     </div>
   </section>
   <div id="dancing-turtle" class="turtle">
