--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <p>
                     Troop 586 strives to provide many opportunities for the boys to learn new skills while enjoying their experience in Scouting. 
                     Our goal is for every scout in the Troop to be given the opportunity to advance in rank and to achieve the highest rank in Scouting - Eagle Scout.  
-                    To date, we have produced 41 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
+                    To date, we have produced 39 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
                     The young men in our troop are active in the National Youth Leadership Training (NYLT) and the Order of the Arrow, scouting's camping national honor society. 
                     Our troop teaches leadership, citizenship, and self respect while camping once a month, every month.  
-                    Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley Council.
+                    Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley. Weekly meetings take place on mondays 6:30pm at the American Legion 377 N Third St Tipp City, OH 45371.
                 </p>
             </div>
             <div class="links">
