--- a/photos.html
+++ b/photos.html
@@ -47,7 +47,7 @@
             <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</a>
             <a href="#gallery" onclick="renderPhotos(sff22)">Scouting For Food 2022</a>
             <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
-
+            <a href="#gallery" onclick="renderPhotos(cme22)">Cycling 2022</a>
         </div>
     </section>
     <section class="main">
