--- a/photos.html
+++ b/photos.html
@@ -48,6 +48,7 @@
             <a href="#gallery" onclick="renderPhotos(sff22)">Scouting For Food 2022</a>
             <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
             <a href="#gallery" onclick="renderPhotos(cme22)">Cycling 2022</a>
+            <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend 2022</a>
         </div>
     </section>
     <section class="main">
