--- a/events.html
+++ b/events.html
@@ -51,7 +51,7 @@
               <div class="content">
                 <h3>January</h3>
                 <h4>Winter Bushwhack/Camp Birch</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Winter Bushwhack is held at Camp Hugh Taylor Birch Scout Camp in Yellow Springs, OH. The scout go on a 6 - 8 mile hike at adjoining John Bryan State Park. This hike is done wearing full backpack.</p>
                 <a href="#gallery" onclick="renderPhotos(wb22)">Click here to see photos</a>
               </div>
               <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
@@ -64,7 +64,7 @@
               <div class="content">
                 <h3>February</h3>
                 <h4>Real Life First Aid/Cricket Holler</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Real life First Aid is held at Cricket Holler Scout Camp in Dayton, OH. At this event the scouts are presented with real life first aid situations and have to react with proper first aid in a timely manner.</p>
                 <a href="#gallery" onclick="renderPhotos(rlfa22)">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
@@ -77,7 +77,7 @@
               <div class="content">
                 <h3>March</h3>
                 <h4>Scouting for Food/Tipp City</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected 2893lbs of food for Needy Baskets food pantry.</p>
                 <a href="#gallery" onclick="renderPhotos(sff22)">Click here to see photos</a>
               </div>
               <a href="https://miamivalleybsa.org/program/scouting-for-food/">
@@ -90,7 +90,7 @@
               <div class="content">
                 <h3>April</h3>
                 <h4>Fish and Wildlife Management/Woodland Trails</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Fish and Wildlife Management is held at Woodland Trails Scout Camp in Camden, OH. The scouts learn about fish and wildlife management on this campout.</p>
                 <a href="#gallery" onclick="renderPhotos(fwlm22)">Click here to see photos</a>
               </div>
               <a href="https://www.daytondailynews.com/local/miami-valley-council-boy-scouts-opt-to-close-sell-off-woodland-trails-camp/C7JKU4OQZVEGTJHLVEDAYDJ3FI/">
@@ -103,7 +103,7 @@
               <div class="content">
                 <h3>May</h3>
                 <h4>Cycling/Hueston Woods</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Cycling main event is held at Hueston Woods State Park in Oxford, OH. The scouts go on a bike ride on the bike trails at the state park.</p>
                 <a href="#gallery" onclick="renderPhotos(cme22)">Click here to see photos</a>
               </div>
               <a href="https://ohiodnr.gov/go-and-do/plan-a-visit/find-a-property/hueston-woods-state-park">
@@ -116,7 +116,7 @@
               <div class="content">
                 <h3>May</h3>
                 <h4>Memorial Day Weekend/Tipp City</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Memorial Day Weekend was a busy weekend for the troop. On Saturday the scouts place flags on the graves of veterans at Maple Hill Cemetery. On Monday the scouts participate in the Memorial Day parade. And this year the scouts completed a service project for an elderly resident.</p>
                 <a href="#gallery" onclick="renderPhotos(md22)">Click here to see photos</a>
               </div>
               <a href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/">
@@ -129,7 +129,7 @@
               <div class="content">
                 <h3>June</h3>
                 <h4>Summer Camp/Camp Friedlander</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>This years summer camp is being held at Camp Friedlander Scout Camp in Loveland, OH. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
@@ -142,7 +142,7 @@
               <div class="content">
                 <h3>July</h3>
                 <h4>Paddle Sports/Camp Birch</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Paddle Sports main event is held at Camp Hugh Taylor Birch in Yellow Springs, OH. The scouts go on a 5 mile canoe trip down the Mad River.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.birchbarkcanoelivery.com/">
@@ -155,7 +155,7 @@
               <div class="content">
                 <h3>August</h3>
                 <h4>Fishing/Chenoweth Trails</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Fishing main event is held at Chenoweth Trails in Greenville, OH. The scouts put all of their fishing knowledge to the test as they attempt to catch fish (everyone catches a fish at this pond).</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://www.mattlight72.com/about-chenoweth-trails/">
@@ -168,7 +168,7 @@
               <div class="content">
                 <h3>September</h3>
                 <h4>Mumfest/Tipp City</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://tippmumfestival.org/">
@@ -181,7 +181,7 @@
               <div class="content">
                 <h3>October</h3>
                 <h4>Shooting Sports/Camp Berry</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Shooting Sports main event is held at Camp Berry Scout Camp in Findlay, OH. The scouts put their shooting skills to the test in Rifle, Shotgun, Archery, and Tomahawk.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
@@ -194,7 +194,7 @@
               <div class="content">
                 <h3>November</h3>
                 <h4>Turkey Bowl/Redmans Picnic Grounds</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>Turkey Bowl is held at the Redmans Picnic Grounds in Troy, OH. For this event the scouts spend the day cooking a Thanksgiving meal that they will share with their families that evening.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=559276214114138">
@@ -207,7 +207,7 @@
               <div class="content">
                 <h3>December</h3>
                 <h4>Yearly Planning/Cricket Holler</h4>
-                <p>ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati similique excepturi totam atque. Voluptates quasi dolore consectetur optio perferendis odit! Suscipit ab quos veritatis non cupiditate fugit natus labore doloribus?</p>
+                <p>The Yearly Planning event is held at Cricket Holler Scout Camp in Dayton, OH. At this event the scouts plan all the next years events.</p>
                 <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
               </div>
               <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
