changed background color, footer, and rendered summer camp round 1 photos

--- a/photos.html
+++ b/photos.html
@@ -49,6 +49,7 @@
             <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
             <a href="#gallery" onclick="renderPhotos(cme22)">Cycling 2022</a>
             <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend 2022</a>
+            <a href="#gallery" onclick="renderPhotos(summerCamp22)">Summer Camp 2022</a>
         </div>
     </section>
     <section class="main">
