added footer to all pages

--- a/troop-roster.html
+++ b/troop-roster.html
@@ -56,8 +56,9 @@
     <div class="cards" id="cards"></div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
-        <h2>Created by:</h2>
-        <h2>Glen Luersman 2022</h2>
+        <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
+        <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
+        <p>Special thanks to <a href="https://alpost586.org/">Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
     </footer>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/troop-roster.js"></script>
