--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="troop-roster.html">Troop Roster</a>
                 <a href="troop-forms.html">Troop Forms</a>
                 <a href="eagle-scouts.html">Eagle Scouts</a>
-                <a href="#contact-us">Contact Us</a>           
+                <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
             </div>
             <div id="main">
                 <span onclick="openNav()">&#9776; Menu</span>
@@ -88,7 +88,7 @@
         <footer>
             <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
             <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-            <p>Special thanks to <a href="https://alpost586.org/">Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+            <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
         </footer>
         <script src="./assets/js/script.js"></script>
     </body>
