--- a/photos.html
+++ b/photos.html
@@ -59,7 +59,7 @@
     <footer>
         <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
         <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-        <p>Special thanks to <a href="https://alpost586.org/">Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+        <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
     </footer>
     <script src="./assets/js/photos.js"></script>
     <script src="./assets/js/script.js"></script>
