added troop slogan to footer

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -52,9 +52,8 @@
   </div>
   <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
   <footer>
-    <a href="#dancing-turtle" onclick="showText()" class="dance">
-      <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
-    </a>
+    <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
+    <a href="#dancing-turtle" onclick="showText()" class="dance"><p>&copy;Troop 586 Tipp City, Ohio 2022</p></a>
     <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
     <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
 </footer>
