--- a/troop-forms.html
+++ b/troop-forms.html
@@ -62,6 +62,7 @@
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
+        <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
         <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
         <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
         <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
