added summer camp photos to events page

--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
                 <h3>June</h3>
                 <h4>Summer Camp/Camp Friedlander</h4>
                 <p>This years summer camp is being held at Camp Friedlander Scout Camp in Loveland, OH. At summer camp the scouts work on completing merit badges, team building exercises, rank advancement requirements, and of course having fun with friends.</p>
-                <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+                <a href="#gallery" onclick="renderPhotos(summerCamp22)">Click here to see photos</a>
               </div>
               <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
                 <div class="eventImg">
